# Physical_MedFL

./: .gitignore  ACDC_preprocessed  README.md  app_client.py  app_server.py  check_dataset.py  config.toml  debug_imports.py  debug_training.py  fix_nifti_warnings.sh  model_and_data_handle.py  pyproject.toml  setup_dataset.py  universal_data_loader.py
med/: debug_client_app.py  env.sh  pyproject.toml  test_loss_functions.py
med/med/: __init__.py  client_app.py  server_app.py  strategy.py  task.py  utils.py
med/research_exports/ACDC_Medical_FL_CPU/: client_detailed_metrics.csv  experiment_summary.json  faup_final_debts.csv  server_round_metrics.csv
med/research_exports/UnifiedFairness_Experiment_20250722_132640/: client_detailed_metrics.csv  experiment_summary.json  server_aggregation_metrics.csv  server_evaluation_metrics.csv
notebooks/: final-application-maxwell-for-segmentation-task (2).ipynb  nn-unet-adaptive-t-vmf-dice-loss (2).ipynb
scripts/: prepare_data.py
src/: __init__.py
src/data/: __init__.py  data.py  dataset.py  demo_loader.py  flower_utils.py  loader.py  partitioning.py  preprocessing.py  research_loader.py
src/data_handling/: __init__.py  data_loader.py
src/experiment/: ablation_study.py  config.yaml
src/fl_core/: __init__.py  app_client.py  app_server.py
src/models/: RobustMedVFL_UNet.py  __init__.py  adaptive_spline_funct.py  b1_map.py  ePURE.py  kan_model.py  mlp_model.py  model_factory.py  new_model.py  quantum_noise_injection.py  unet.py  unet_model.py
src/utils/: __init__.py  logger.py  losses.py  metrics.py  seed.py
