[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "med"
version = "1.0.0"
description = "Federated Learning for Medical Image Segmentation using ACDC dataset"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.0.0",
    "scikit-learn>=1.0.0",
    "h5py>=3.0.0",
    "pandas>=1.3.0",
    "omegaconf>=2.1.0",
    "PyYAML>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.60.0",
    "psutil>=5.8.0",
    "nibabel>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "alvin"

[tool.flwr.app.components]
serverapp = "med.server_app:app"
clientapp = "med.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.8
local-epochs = 20
learning-rate = 1e-4
experiment-name = "ACDC_Medical_FL"
partition-strategy = "non-iid"    
alpha = 0.5
min-fit-clients = 4
min-available-clients = 4

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
options.backend.client-resources.num-cpus = 3
options.backend.client-resources.num-gpus = 0.25
options.backend.config.memory = 16000000000
options.backend.config.object-store-memory = 8000000000

